# touchable-templates

./: LICENSE  README.md  pyproject.toml
src/touchable_templates/: __init__.py  apps.py
src/touchable_templates/django/: loader.py  middleware.py
src/touchable_templates/static/js/: touchable_templates.js
