[project]
name = "touchable-templates"
version = "2026.02.8a"
description = "A dev tool that magically opens templates and partials in your IDE"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Brady Whitby" }
]
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.9.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.hatch.build.targets.wheel]
packages = ["src/touchable_templates"]
